gccida/c1/do_cmp_and_jump
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_cmp_and_jump/src/expmed.c:5172:44: error: must use 'enum' tag to refer to type 'rtx_code'
void  do_cmp_and_jump( rtx arg1, rtx arg2, rtx_code op, machine_mode mode, rtx label) 
                                           ^
                                           enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_cmp_and_jump/src/expmed.c:5172:57: error: must use 'enum' tag to refer to type 'machine_mode'
void  do_cmp_and_jump( rtx arg1, rtx arg2, rtx_code op, machine_mode mode, rtx label) 
                                                        ^
                                                        enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_cmp_and_jump/src/expmed.c:5178:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_cmp_and_jump/src/expmed.c:5185:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] == MODE_INT && !can_compare_p( op, mode, ccp_jump) ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_cmp_and_jump/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_cmp_and_jump/src/expmed.c:5189:11: error: expected expression
switch (  struct op ) 
          ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/do_cmp_and_jump/src/obj/expmed.o] Error 1
